Revert "Fix blockquote colour contrast (#11299)"
This reverts commit d0c6880335b699f680f079a2df5913ce2417a9c0.

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -419,7 +419,6 @@ legend {
 
         blockquote {
             border-left: 2px solid $blockquote-bar-color;
-            color: $secondary-content;
             border-radius: 2px;
             padding: 0 10px;
         }
